--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>{{ page.title }} &larr; Ben Langfeld</title>
-    <meta name="author" content="Ben Langfeld" />
-
-    <!-- <link rel='openid.server' href='http://www.myopenid.com/server' />
-    <link rel='openid.delegate' href='http://ben.langfeld.me' /> -->
+    <title>{{ page.title }} &larr; Simon Murphy</title>
+    <meta name="author" content="Simon Murphy" />
 
     <link rel="start" href="/" />
 
     {% if page.keywords %}
       <meta name="keywords" content="{{ page.keywords }}">
-    {% endif %}
-
-    {% if page.feed %}
-      <link rel="alternate" type="application/atom+xml" href="{{ page.feed }}" title="RSS feed" />
     {% endif %}
 
      <!-- syntax highlighting CSS -->
@@ -35,13 +28,11 @@
 
       <div id="header">
         <h1>
-          <a href="/" title="My Personal Site">Ben Langfeld</a>
+          <a href="/" title="My Personal Site">Simon Murphy</a>
         </h1>
         <ul class="nav">
           <li><a class="home" href="/">Home</a></li>
-          <li><a class="info" href="/info">Info</a></li>
-          <li><a class="work" href="/work">Work</a></li>
-          <li><a class="code" href="/code">Code</a></li>
+          <li><a class="research" href="/research">Research</a></li>
         </ul>
       </div>
 
@@ -53,7 +44,7 @@
         <address>
           <span class="copyright">
             Content by
-            <a href="/info/site.html">Ben Langfeld</a>
+            <a href="/info/site.html">Simon Murphy</a>
             <br/>
             Design by
             <a href="http://mark.reid.name">Mark Reid</a>
