Add triathlon stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
         <ul class="nav">
           <li><a class="home" href="/">Home</a></li>
           <li><a class="research" href="/research">Research</a></li>
+          <li><a class="triathlon" href="/triathlon">Triathlon</a></li>
         </ul>
       </div>
 
