Pave the way for new 'eclectic' section.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
         <ul class="nav">
           <li><a class="home" href="/">Home</a></li>
           <li><a class="research" href="/research">Research</a></li>
-          <li><a class="triathlon" href="/triathlon">Triathlon</a></li>
+          <li><a class="eclectic" href="/eclectic">Eclectic</a></li>
         </ul>
       </div>
 
